# legend-of-legends

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md
.githooks/: pre-commit
docs/: ARCHITECTURE.md  LORE.md
src/: main.rs
src/engine/: mod.rs
src/engine/core/: math.rs  mod.rs  time.rs  transform.rs
src/engine/physics/: collision.rs  mod.rs
src/engine/platform/: input.rs  mod.rs  window.rs
src/engine/rendering/: camera.rs  layers.rs  mock_assets.rs  mod.rs  sprite.rs
src/engine/ui/: clock.rs  components.rs  debug.rs  font.rs  layout.rs  minimap.rs  mod.rs
src/game/: buildings.rs  day_night_cycle.rs  level.rs  level_manager.rs  mod.rs  ui_manager.rs  win_condition.rs
src/game/states/: mod.rs
src/systems/: enemy_spawner.rs  mod.rs  win_condition_system.rs
src/systems/enemy/: mod.rs
src/systems/mech/: mod.rs  movement.rs  transformation.rs  weapons.rs
src/systems/particles/: mod.rs
src/systems/player/: mod.rs
src/systems/projectile/: mod.rs
src/systems/weapons/: mod.rs
